<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".Activities.LoginActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="130dp"
        android:layout_height="123dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:id="@+id/liner_layout_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_logo"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/image_view_user_name"
            android:layout_width="22sp"
            android:layout_height="22sp"
            app:srcCompat="@drawable/ic_perm_identity_white_24dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner_layout_user_name"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:maxLines="1"
        android:nextFocusDown="@+id/edit_text_password"
        android:inputType="text"
        android:textColor="@color/white"
        android:theme="@style/TextLabel" />

    <LinearLayout
        android:id="@+id/liner_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_user_name"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_view_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/image_view_password"
            android:layout_width="22sp"
            android:layout_height="22sp"
            app:srcCompat="@drawable/ic_lock_outline_white_24dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/liner_layout_password"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="36dp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:theme="@style/TextLabel" />


    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_password"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/button_login_shape"
        android:shadowDx="@android:integer/config_longAnimTime"
        android:text="@string/login"
        android:textColor="@color/white" />
</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>